Use a different reference code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,10 @@ project (ble_scan_test)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-find_package(Curses REQUIRED)
 find_package(BLUETOOTH REQUIRED)
 add_executable(ble_scan_test main.cc)
 
-target_include_directories(ble_scan_test PRIVATE ${CURSES_INCLUDE_DIRS} ${LIBBLUETOOTH_INCLUDE_DIR})
-target_link_libraries(ble_scan_test ${CURSES_LIBRARIES} ${LIBBLUETOOTH_LIBRARIES})
+target_include_directories(ble_scan_test PRIVATE ${LIBBLUETOOTH_INCLUDE_DIR})
+target_link_libraries(ble_scan_test ${LIBBLUETOOTH_LIBRARIES})
 
 install(TARGETS ble_scan_test DESTINATION bin)
